--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
             width: 90px;
             height: 60px;
             margin-left: 10px;
-           margin-top: 10px;
-      
-.LR{
-    
-}      
+           margin-top: 10px;      
         }
    </style>
-   
+</head>
 <body>
 
 <div class="top-rect">
@@ -59,4 +55,4 @@
 
 </body>
 
-</head>
+</html>
