--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>q
 <html>
 <head>
     <title>My Page</title>
@@ -14,6 +14,7 @@
             margin-top: 40px;
             border-radius:8px;
             display: flex;
+            margin-bottom: 2px;
         }
         .bottom-rect{
             margin-top:100%;
