--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
            border-radius:10px;
           text-align: center;
            font-size:30px;
+           font-family: 'Montserrat', sans-serif;
+           font-weight: 600;
+           letter-spacing: 0.5px;
            
            
       }
