--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             height: 95px;
             background:   #FAFAFA;
             margin-top: 40px;
-            border-radius:8px;
             display: flex;
             margin-bottom: 2px;
         }
@@ -45,14 +44,14 @@
         }
         .LRS{
             width: 100%;
-            height:76px;
+            height: 80px;
             background-color:rgb(231, 205, 53);
             margin-top:10px;
             border-radius:10px;
             margin-right: 10px;
         }
     .LR{
-        height: 69px;
+        height: 70px;
         padding-top:10px;
         padding-left:10px;
         padding-right:10px;
@@ -61,6 +60,13 @@
         margin-right:10px;
         margin-top:10px;
         border-radius:10px;
+    }
+    .middlerect{
+        border-radius: 10px;
+        height: 300px;
+        width: 100%;
+        background: rgb(104, 187, 108);
+        margin-top: 10px;
     }
    </style>
 </head>
@@ -76,6 +82,7 @@
 <p class="header"> this is an example</p>
  </div>
 </div>
+<div class="middlerect"></div>
   <div class="bottom-rect"></div>
 
 </body>
