--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             margin-top: 40px;
             display: flex;
             margin-bottom: 2px;
+            border-radius:10px;
         }
         .bottom-rect{
             margin-top:100%;
@@ -63,10 +64,10 @@
     }
     .middlerect{
         border-radius: 10px;
-        height: 300px;
+        height: 550px;
         width: 100%;
-        background: rgb(104, 187, 108);
-        margin-top: 10px;
+        background: #FAFAFA;
+        margin-top: 40px;
     }
    </style>
 </head>
