--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="top-rect">
 <div class="LR">
 
-<img src="group168.png" alt="not loading" class="pics">
+<img src="img1.png" alt="not loading" class="pics">
  </div>
  <div class="LRS">
 
