--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
     .middlerect{
         border-radius: 10px;
-        height: 550px;
+        height: 100%;
         width: 100%;
         background: #FAFAFA;
         margin-top: 40px;
@@ -89,7 +89,9 @@
 <p class="header"> this is an example</p>
  </div>
 </div>
-<div class="middlerect"></div>
+<div class="middlerect">
+    <img src = "img2.jpeg" alt = "please wait" class = "fraim">
+</div>
   <div class="bottom-rect"></div>
 
 </body>
