--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         background: #FAFAFA;
         margin-top: 40px;
     }
+    .fraim{
+        margin-top: 20px;
+        height: 45%;
+        width: 30%;
+        margin-left: 40px;
+    }
    </style>
 </head>
 <body>
