--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         margin-top: 20px;
         height: 45%;
         width: 30%;
-        margin-left: 40px;
+        margin-left: 20px;
+        margin-bottom: 20px;
+        border: 2px solid yellow;
     }
    </style>
 </head>
