color change of mid image

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         width: 30%;
         margin-left: 20px;
         margin-bottom: 20px;
-        border: 2px solid yellow;
+        border: 2px solid rgb(46, 206, 203);
+        border-width:4px;
     }
    </style>
 </head>
@@ -94,7 +95,7 @@
  </div>
  <div class="LRS">
 
-<p class="header"> this is an example</p>
+<p class="header"> This is an example</p>
  </div>
 </div>
 <div class="middlerect">
