--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            
            border-radius:10px;
           text-align: center;
-           font-size:30px;
+           font-size:20px;
            font-family: 'Montserrat', sans-serif;
            font-weight: 600;
            letter-spacing: 0.5px;
@@ -94,7 +94,7 @@
  </div>
  <div class="LRS">
 
-<p class="header"> this is an example</p>
+<p class="header"> Who else do you think it can be other than coffee, when it's the over coffee session. </p>
  </div>
 </div>
 <div class="middlerect">
